<resources>
    <string name="app_name">SensibleTest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--<string name="menu_home">Home</string>-->
    <string name="current_group_chat">Group chat</string>
    <string name="menu_members">Members</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_archives">Saved links</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_back_groups">Go back to groups</string>
</resources>