<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_current_group_chat">

    <fragment
        android:id="@+id/nav_current_group_chat"
        android:name="com.example.sensibletest.ui.home.HomeFragment"
        android:label="@string/current_group_chat"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_members"
        android:name="com.example.sensibletest.ui.gallery.GalleryFragment"
        android:label="@string/menu_members"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.sensibletest.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.sensibletest.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_archives"
        android:name="com.example.sensibletest.ArchiveFragment"
        android:label="@string/menu_archives"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sensibletest.GalleFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_slideshow" />
</navigation>